--- a/org.eclipse.jgit.ssh.apache.test/BUILD
+++ b/org.eclipse.jgit.ssh.apache.test/BUILD
@@ -3,14 +3,19 @@ load(
     "junit_tests",
 )
 
+RESOURCES = glob(["tst-rsrc/**"])
+
 junit_tests(
     name = "sshd_apache",
     srcs = glob(["tst/**/*.java"]),
+    resource_strip_prefix = "org.eclipse.jgit.ssh.apache.test/tst-rsrc",
+    resources = RESOURCES,
     tags = ["sshd"],
     deps = [
         "//lib:eddsa",
         "//lib:junit",
         "//lib:sshd-osgi",
+        "//lib:sshd-putty",
         "//lib:sshd-sftp",
         "//org.eclipse.jgit:jgit",
         "//org.eclipse.jgit.ssh.apache:ssh-apache",
