--- a/org.eclipse.jgit.pgm/pom.xml
+++ b/org.eclipse.jgit.pgm/pom.xml
@@ -112,6 +112,18 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.sshd</groupId>
+      <artifactId>sshd-osgi</artifactId>
+      <version>${apache-sshd-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.sshd</groupId>
+      <artifactId>sshd-putty</artifactId>
+      <version>${apache-sshd-version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
