sshd: add support for reading PuTTY key files
Adapt targets to use Orbit I20190721155340, which is the first
Orbit repository to include the sshd-putty 2.2.0 bundle.

The supported key pair parsers are a global setting in Apache
MINA sshd. A library such as the JGit ssh client library should not
enforce a particular setting; some users might want to have their
own parsers. Therefore set the PuTTY key pair parser in JGit pgm.

Provide a new test for connecting with PuTTY private key files
generated on Windows 7 with PuTTY 0.72.

Adapt bazel build.

CQ: 20150
Bug: 541273
Change-Id: I068fe03cef789de7814830639361afaf08ca0e35
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.jgit.ssh.apache.test/pom.xml
+++ b/org.eclipse.jgit.ssh.apache.test/pom.xml
@@ -118,6 +118,21 @@
     <sourceDirectory>src/</sourceDirectory>
     <testSourceDirectory>tst/</testSourceDirectory>
 
+    <testResources>
+      <testResource>
+        <directory>tst-rsrc/</directory>
+      </testResource>
+    </testResources>
+
+    <resources>
+      <resource>
+        <directory>.</directory>
+        <includes>
+          <include>plugin.properties</include>
+        </includes>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
