Disable debug log for FS in org.eclipse.jgit.test
This was enabled unintentionally in 06fc6c7c and spams the test logs. We
can enable this when needed.

Change-Id: I9f3042c0e285ff236be65fcc02bdcfdb90efc3af
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.test/tst-rsrc/log4j.properties
+++ b/org.eclipse.jgit.test/tst-rsrc/log4j.properties
@@ -10,5 +10,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.appender.fileLogger.bufferedIO = true
 log4j.appender.fileLogger.bufferSize = 4096
 
-log4j.logger.org.eclipse.jgit.util.FS = DEBUG
+#log4j.logger.org.eclipse.jgit.util.FS = DEBUG
 #log4j.logger.org.eclipse.jgit.internal.storage.file.FileSnapshot = DEBUG
