ReceivePack: Prevent pointing a branch to a non-commit object.
Since commit c3b0dec509fe136c5417422f31898b5a4e2d5e02 in 2008, git has
disallowed writing a non-commit to refs/heads/* refs. JGit still allows
that, which can put users in a bad situation (e.g. pushing a tag to
master).

Validate that the target sha1 of the ref points to a commit object when
pushing to refs/heads/*.

Change-Id: I8f98ae6d8acbcd5ef7553ec732bc096cb6eb7c4e
Signed-off-by: Yunjie Li <yunjieli@google.com>

--- a/org.eclipse.jgit/resources/org/eclipse/jgit/internal/JGitText.properties
+++ b/org.eclipse.jgit/resources/org/eclipse/jgit/internal/JGitText.properties
@@ -498,6 +498,7 @@ noHMACsupport=No {0} support: {1}
 noMergeBase=No merge base could be determined. Reason={0}. {1}
 noMergeHeadSpecified=No merge head specified
 nonBareLinkFilesNotSupported=Link files are not supported with nonbare repos
+nonCommitToHeads=Cannot point a branch to a non-commit object
 noPathAttributesFound=No Attributes found for {0}.
 noSuchRef=no such ref
 noSuchSubmodule=no such submodule {0}
