--- a/org.eclipse.jgit.lfs/pom.xml
+++ b/org.eclipse.jgit.lfs/pom.xml
@@ -50,7 +50,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>5.4.1-SNAPSHOT</version>
+    <version>5.4.1.201908211225-r</version>
   </parent>
 
   <artifactId>org.eclipse.jgit.lfs</artifactId>
