--- a/org.eclipse.jgit.lfs.server.test/pom.xml
+++ b/org.eclipse.jgit.lfs.server.test/pom.xml
@@ -50,7 +50,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>5.3.4-SNAPSHOT</version>
+    <version>5.3.4.201908231101-r</version>
   </parent>
 
   <artifactId>org.eclipse.jgit.lfs.server.test</artifactId>
