--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
   <groupId>org.eclipse.jgit</groupId>
   <artifactId>org.eclipse.jgit-parent</artifactId>
   <packaging>pom</packaging>
-  <version>5.3.4-SNAPSHOT</version>
+  <version>5.3.4.201908231101-r</version>
 
   <name>JGit - Parent</name>
   <url>${jgit-url}</url>
