--- a/org.eclipse.jgit.ant/pom.xml
+++ b/org.eclipse.jgit.ant/pom.xml
@@ -48,7 +48,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2.201908231537-r</version>
   </parent>
 
   <artifactId>org.eclipse.jgit.ant</artifactId>
