Exclude SecurityManagerTest from bazel test run
Bazel uses a security manager to sandbox tests, it cannot handle another
security manager.

Change-Id: Id7dd11073178e5e65337414681c1c6e74e14cba7
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.test/BUILD
+++ b/org.eclipse.jgit.test/BUILD
@@ -36,11 +36,15 @@ DATA = [
     PKG + "lib/sorttest.gitindex.dat",
 ]
 
+EXCLUDED = [
+    PKG + "api/SecurityManagerTest.java",
+]
+
 RESOURCES = glob(["resources/**"])
 
 tests(tests = glob(
     ["tst/**/*.java"],
-    exclude = HELPERS + DATA,
+    exclude = HELPERS + DATA + EXCLUDED,
 ))
 
 java_library(
