--- a/org.eclipse.jgit/pom.xml
+++ b/org.eclipse.jgit/pom.xml
@@ -53,7 +53,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>5.5.0-SNAPSHOT</version>
+    <version>5.5.0.201908280940-m3</version>
   </parent>
 
   <artifactId>org.eclipse.jgit</artifactId>
