Unify feature descriptions
* Remove trailing dot from descriptions unless they are full sentences.
* Consistently Use UPPERCASE for abbreviations (previously it was a mix
of UPPERCASE and Title Case).

Inspired by
https://download.eclipse.org/oomph/archive/reports/download.eclipse.org/releases/2019-09/index.html

Change-Id: Ib117e71219e7d3e7e1461664baec6ed13ed3aecb
Signed-off-by: Michael Keppler <Michael.Keppler@gmx.de>

--- a/org.eclipse.jgit.packaging/org.eclipse.jgit.feature/feature.properties
+++ b/org.eclipse.jgit.packaging/org.eclipse.jgit.feature/feature.properties
@@ -15,7 +15,7 @@ updateSiteName=Eclipse JGit Update Site
 
 # description property - text of the "Feature Description"
 description=\
-A pure Java implementation of the Git version control system.\n
+A pure Java implementation of the Git version control system\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
