--- a/org.eclipse.jgit.packaging/org.eclipse.jgit.lfs.feature/feature.properties
+++ b/org.eclipse.jgit.packaging/org.eclipse.jgit.lfs.feature/feature.properties
@@ -15,7 +15,7 @@ updateSiteName=Eclipse JGit Update Site
 
 # description property - text of the "Feature Description"
 description=\
-Optional LFS support.\n
+Optional LFS support
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
