--- a/org.eclipse.jgit.packaging/org.eclipse.jgit.ssh.apache.feature/feature.properties
+++ b/org.eclipse.jgit.packaging/org.eclipse.jgit.ssh.apache.feature/feature.properties
@@ -15,7 +15,7 @@ updateSiteName=Eclipse JGit Update Site
 
 # description property - text of the "Feature Description"
 description=\
-Ssh support using Apache MINA sshd.\n
+SSH support using Apache MINA sshd\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
