--- a/org.eclipse.jgit.packaging/org.eclipse.jgit.http.apache.feature/feature.properties
+++ b/org.eclipse.jgit.packaging/org.eclipse.jgit.http.apache.feature/feature.properties
@@ -15,7 +15,7 @@ updateSiteName=Eclipse JGit Update Site
 
 # description property - text of the "Feature Description"
 description=\
-Optional Http support using Apache httpclient.\n
+Optional HTTP support using Apache httpclient\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
