--- a/org.eclipse.jgit.packaging/org.eclipse.jgit.ssh.apache.feature/feature.properties
+++ b/org.eclipse.jgit.packaging/org.eclipse.jgit.ssh.apache.feature/feature.properties
@@ -8,14 +8,14 @@
 #
 ###############################################################################
 
-featureName=Java implementation of Git - ssh support using Apache MINA sshd
+featureName=Java implementation of Git - SSH support using Apache MINA sshd
 providerName=Eclipse JGit
 
 updateSiteName=Eclipse JGit Update Site
 
 # description property - text of the "Feature Description"
 description=\
-Ssh support using Apache MINA sshd.\n
+SSH support using Apache MINA sshd\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
