--- a/org.eclipse.jgit.archive/pom.xml
+++ b/org.eclipse.jgit.archive/pom.xml
@@ -50,7 +50,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>4.11.9-SNAPSHOT</version>
+    <version>4.11.9.201909030838-r</version>
   </parent>
 
   <artifactId>org.eclipse.jgit.archive</artifactId>
