Bazel: Reformat build files with buildifier
Change-Id: I9430884c636aad28cda7776a62e7be84573b31d4
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -189,13 +189,13 @@ java_library(
     testonly = 1,
     visibility = ["//visibility:public"],
     exports = [
-        "@bytebuddy//jar",
         "@bytebuddy-agent//jar",
+        "@bytebuddy//jar",
         "@hamcrest-core//jar",
         "@hamcrest-library//jar",
         "@junit//jar",
         "@mockito//jar",
-        "@objenesis//jar"
+        "@objenesis//jar",
     ],
 )
 
@@ -204,8 +204,8 @@ java_library(
     testonly = 1,
     visibility = ["//visibility:public"],
     exports = [
-        "@bytebuddy//jar",
         "@bytebuddy-agent//jar",
+        "@bytebuddy//jar",
         "@mockito//jar",
         "@objenesis//jar",
     ],
