Modified project settings

--- a/project.config
+++ b/project.config
@@ -4,3 +4,11 @@
 	requireChangeId = true
 [access]
 	inheritFrom = permissions/jgit-dev
+[plugin "uploadvalidator"]
+	blockedContentTypeWhitelist = false
+	maxPathLength = 0
+	rejectDuplicatePathnames = true
+	rejectDuplicatePathnamesLocale = en
+	rejectSubmodule = true
+	rejectSymlink = false
+	rejectWindowsLineEndings = true
