Format lib/BUILD with buildifier
Change-Id: I4f0ad64371b160b67797f49b9fde521e5dea9396
Signed-off-by: David Pursehouse <david.pursehouse@gmail.com>

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -134,13 +134,13 @@ java_library(
     testonly = 1,
     visibility = ["//visibility:public"],
     exports = [
-        "@bytebuddy//jar",
         "@bytebuddy-agent//jar",
+        "@bytebuddy//jar",
         "@hamcrest-core//jar",
         "@hamcrest-library//jar",
         "@junit//jar",
         "@mockito-core//jar",
-        "@objenesis//jar"
+        "@objenesis//jar",
     ],
 )
 
