bazel: fix running http tests
Other than Maven bazel seems unable to cope with abstract
AllFactoriesHttpTests having no test methods, hence move it to helper
classes. We cannot move the class to the src source directory since
Maven considers it to be a test source.

Change-Id: I9dfe43f882ad073b284648e24844b51877d87776
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.http.test/BUILD
+++ b/org.eclipse.jgit.http.test/BUILD
@@ -5,7 +5,10 @@ load(
 
 junit_tests(
     name = "http",
-    srcs = glob(["tst/**/*.java"]),
+    srcs = glob(
+        ["tst/**/*.java"],
+        exclude = ["tst/org/eclipse/jgit/http/test/AllFactoriesHttpTestCase.java"],
+    ),
     tags = ["http"],
     deps = [
         ":helpers",
@@ -32,10 +35,15 @@ junit_tests(
 java_library(
     name = "helpers",
     testonly = 1,
-    srcs = glob(["src/**/*.java"]),
+    srcs = glob(
+        ["src/**/*.java"],
+    ) + [
+        "tst/org/eclipse/jgit/http/test/AllFactoriesHttpTestCase.java",
+    ],
     deps = [
         "//lib:junit",
         "//lib:servlet-api",
+        "//org.eclipse.jgit.http.apache:http-apache",
         "//org.eclipse.jgit.http.server:jgit-servlet",
         "//org.eclipse.jgit:jgit",
         "//org.eclipse.jgit.junit.http:junit-http",
